freshed-rs-macros/tests/ui/fail/html_in_missing_context.rs
use freshed_rs_macros::html_ctx;

fn main() {
    let _ = html_ctx!(<div>oops</div>);
}
